fixed overflow issue with particles and skill images

--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,8 @@ body {
 
 .language-icons img,
 .framework-icons img {
-    height: 80px !important;
-    width: 80px !important;
+    height: 80% !important;
+    width: 80% !important;
     transition-duration: 0.3s;
     object-fit: contain;
 }
@@ -46,14 +46,13 @@ body {
 
 .language-icons,
 .framework-icons {
-    height: 100px;
     margin: 0 10%;
 }
 
 .language-icons img:hover,
 .framework-icons img:hover {
-    height: 100px !important;
-    width: 100px !important;
+    height: 100% !important;
+    width: 100% !important;
     transition-duration: 0.3s;
 }
 
@@ -70,6 +69,7 @@ body {
     position: absolute;
     width: 100vw;
     height: 100vh;
+    left: 0;
 }
 
 .social-icons a {
@@ -119,5 +119,9 @@ body {
 
     .p-images {
         order: 2 !important;
+    }
+
+    #Skills {
+        padding: 1rem !important;
     }
 }
